--- a/xk-truck-frontend/package.json
+++ b/xk-truck-frontend/package.json
@@ -6,12 +6,19 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "sync:products": "node scripts/sync-products-simple.js"
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
+    "@supabase/supabase-js": "^2.45.0",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.4",
     "tailwindcss": "^4.1.17"
+  },
+  "devDependencies": {
+    "@aws-sdk/client-s3": "^3.700.0",
+    "cheerio": "^1.0.0",
+    "dotenv": "^16.4.5"
   }
 }
