feat: 添加AI客服和询盘功能 - Cloudflare Worker后端 - DeepSeek AI集成 - Resend邮件通知 - 前端ChatWidget组件

--- a/xk-truck-frontend/.env.example
+++ b/xk-truck-frontend/.env.example
@@ -19,3 +19,6 @@ R2_PUBLIC_DOMAIN=images.xk-truck.cn
 PUBLIC_SUPABASE_URL=https://xktruck.supabase.co
 PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 PUBLIC_R2_PUBLIC_DOMAIN=images.xk-truck.cn
+
+# Worker API (询盘和AI客服)
+PUBLIC_API_URL=https://xk-truck-api.your-subdomain.workers.dev
