feat(seo): 完成SEO优化配置 - 添加Schema.org结构化数据(Organization/Product/FAQ/BreadcrumbList) - 增强Layout全局SEO支持 - 创建GitHub Actions SEO自动更新工作流 - 添加GSC API脚本和sitemap提交脚本 - 更新Supabase schema添加SEO相关表 - 添加Google Cloud GSC配置指南

--- a/xk-truck-frontend/package.json
+++ b/xk-truck-frontend/package.json
@@ -7,7 +7,9 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "sync:products": "node scripts/sync-products-simple.js"
+    "sync:products": "node scripts/sync-products-simple.js",
+    "seo:update": "node scripts/seo-auto-update.js",
+    "seo:submit-sitemap": "node scripts/submit-sitemap.js"
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
