--- a/xk-truck-frontend/.env.example
+++ b/xk-truck-frontend/.env.example
@@ -4,7 +4,7 @@
 # =====================================================
 
 # Supabase 配置
-SUPABASE_URL=https://xktruck.supabase.co
+SUPABASE_URL=https://ltqnikmoeroelfrwcfqr.supabase.co
 SUPABASE_ANON_KEY=your_anon_key_here
 SUPABASE_SERVICE_KEY=your_service_role_key_here
 
@@ -16,7 +16,7 @@ R2_BUCKET_NAME=xktruck-images
 R2_PUBLIC_DOMAIN=images.xk-truck.cn
 
 # 构建时使用的公开变量 (Astro 需要 PUBLIC_ 前缀)
-PUBLIC_SUPABASE_URL=https://xktruck.supabase.co
+PUBLIC_SUPABASE_URL=https://ltqnikmoeroelfrwcfqr.supabase.co
 PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 PUBLIC_R2_PUBLIC_DOMAIN=images.xk-truck.cn
 
